Release history for Dist-Zilla-Plugin-lib

{{$NEXT}}

0.001001 2017-02-05T12:52:46Z f1ede5c
 - Synopsis clarified
 - Add a "related reading" section with links to dot-in-INC stuff

0.001000 2017-02-05T11:27:57Z 6ef4630
 - First version.