@@ -1,4 +1,4 @@
-# This file was automatically generated by Dist::Zilla::Plugin::MakeMaker v6.008.
+# This file was automatically generated by Dist::Zilla::Plugin::MakeMaker v6.009.
 use strict;
 use warnings;
 
@@ -29,7 +29,7 @@ my %WriteMakefileArgs = (
     "ExtUtils::MakeMaker" => 0,
     "File::Spec" => 0,
     "Test::DZil" => 0,
-    "Test::More" => "0.89",
+    "Test::More" => 0,
     "constant" => 0
   },
   "VERSION" => "0.001002",
@@ -47,7 +47,7 @@ my %FallbackPrereqs = (
   "MooseX::Types::Moose" => 0,
   "Path::Tiny" => 0,
   "Test::DZil" => 0,
-  "Test::More" => "0.89",
+  "Test::More" => 0,
   "constant" => 0,
   "lib" => 0,
   "strict" => 0,
