@@ -1,5 +1,7 @@
 This file contains changes in REQUIRED dependencies for standard CPAN phases (configure/build/runtime/test)
 
 0.001002
+ [Changed / test requires]
+ - Test::More 0.89 → 0
 
 0.001001 2017-02-05T12:52:46Z
