@@ -1,6 +1,15 @@
 Release history for Dist-Zilla-Plugin-lib
 
 {{$NEXT}}
+ [Bugfix]
+ - Avoid issues with tests and -Ddefault_inc_excludes_dot
+ - Want-to-buy a -Ddefault_modules_exclude_irony
+ - I know right?
+
+ [Dependencies::Stats]
+ - Dependencies changed since 0.001001, see misc/*.deps* for details
+ - develop: ↑1 (suggests: ↑2)
+ - test: ↓1
 
 0.001001 2017-02-05T12:52:46Z f1ede5c
  - Synopsis clarified
